--- a/.github/workflows/test_client_ubuntu_nightlies.yml
+++ b/.github/workflows/test_client_ubuntu_nightlies.yml
@@ -17,11 +17,19 @@ concurrency:
 
 jobs:
   build:
-
+    name: Ubuntu Nightly
     runs-on: ubuntu-latest
     timeout-minutes: 40
+    strategy:
+      matrix:
+        git_ref:
+          - dev
+          - v2.1.2
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ matrix.git_ref }}
+        fetch-depth: 0
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
