--- a/.github/workflows/test_client_windows_nightlies.yml
+++ b/.github/workflows/test_client_windows_nightlies.yml
@@ -16,15 +16,21 @@ jobs:
   build:
     runs-on: windows-latest
     timeout-minutes: 40
+    name: Windows Nightly
     strategy:
-        matrix:
-            python-version: ['3.12', '3.13']
+      matrix:
+        git_ref:
+          - dev
+          - v2.1.2
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+      with:
+        ref: ${{ matrix.git_ref }}
+        fetch-depth: 0
+    - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
-        python-version: "${{ matrix.python-version }}"
+        python-version: "3.13"
     - name: Install dependencies
       run: |
         rm poetry.lock
