👷 [skip ci] Allow CI fails in matrix

--- a/.github/workflows/test_client_macos_nightlies.yml
+++ b/.github/workflows/test_client_macos_nightlies.yml
@@ -18,6 +18,7 @@ jobs:
     name: macOS Nightly
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         git_ref:
           - dev
