--- a/.github/workflows/test_client_ubuntu_nightlies.yml
+++ b/.github/workflows/test_client_ubuntu_nightlies.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 40
     strategy:
+      fail-fast: false
       matrix:
         git_ref:
           - dev
