--- a/.github/workflows/test_multiple_python.yml
+++ b/.github/workflows/test_multiple_python.yml
@@ -21,8 +21,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 40
     strategy:
-        matrix:
-            python-version: ['3.10', '3.11', '3.12']
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12']
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
