--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simvue"
-version = "2.1.2"
+version = "2.1.3"
 description = "Simulation tracking and monitoring"
 authors = [
   {name = "Simvue Development Team", email = "info@simvue.io"}
@@ -55,6 +55,7 @@ dependencies = [
   "deepmerge (>=2.0,<3.0)",
   "geocoder (>=1.38.1,<2.0.0)",
   "pydantic-extra-types (>=2.10.5,<3.0.0)",
+  "pyyaml (>=6.0.2,<7.0.0)",
 ]
 
 [project.urls]
