--- a/.github/workflows/test_client_windows_nightlies.yml
+++ b/.github/workflows/test_client_windows_nightlies.yml
@@ -61,7 +61,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m object_removal -m 'not unix' -c /dev/null -p no:warnings
+        -m 'object_removal and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   dispatch_tests:
     runs-on: windows-latest
@@ -85,7 +85,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m dispatch -m 'not unix' -c /dev/null -p no:warnings
+        -m 'dispatch and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   run_tests_online:
     runs-on: windows-latest
@@ -110,7 +110,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m run -m online -m 'not unix' -c /dev/null -p no:warnings
+        -m run -m 'online and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   run_tests_offline:
     runs-on: windows-latest
@@ -135,7 +135,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m run -m offline -m 'not unix' -c /dev/null -p no:warnings
+        -m run -m 'offline and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   config_tests:
     runs-on: windows-latest
@@ -159,7 +159,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m config -m 'not unix' -c /dev/null -p no:warnings
+        -m 'config and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   executor_tests:
     runs-on: windows-latest
@@ -183,7 +183,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m executor -n 'not unix' -c /dev/null -p no:warnings
+        -m 'executor and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   api_tests:
     runs-on: windows-latest
@@ -207,7 +207,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m api -m 'not unix' -c /dev/null -p no:warnings
+        -m 'api and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   local_tests:
     runs-on: windows-latest
@@ -231,5 +231,5 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m local -m 'not unix' -c /dev/null -p no:warnings
+        -m 'local and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
