--- a/.github/workflows/test_client_windows_nightlies.yml
+++ b/.github/workflows/test_client_windows_nightlies.yml
@@ -38,6 +38,7 @@ jobs:
         python -m pytest -x
         -m object_retrieval -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   object_removal:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -63,6 +64,7 @@ jobs:
         python -m pytest -x
         -m 'object_removal and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   dispatch_tests:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -87,6 +89,7 @@ jobs:
         python -m pytest -x
         -m 'dispatch and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   run_tests_online:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -112,6 +115,7 @@ jobs:
         python -m pytest -x
         -m run -m 'online and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   run_tests_offline:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -137,6 +141,7 @@ jobs:
         python -m pytest -x
         -m run -m 'offline and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   config_tests:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -161,6 +166,7 @@ jobs:
         python -m pytest -x
         -m 'config and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   executor_tests:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -185,6 +191,7 @@ jobs:
         python -m pytest -x
         -m 'executor and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   api_tests:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -209,6 +216,7 @@ jobs:
         python -m pytest -x
         -m 'api and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
   local_tests:
     runs-on: windows-latest
     timeout-minutes: 30
@@ -233,3 +241,4 @@ jobs:
         python -m pytest -x
         -m 'local and not unix' -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+      shell: pwsh
