--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,7 @@ repos:
     hooks:
     -   id: bandit
         args: [-lll, --recursive, clumper]
+  - repo: https://github.com/DetachHead/basedpyright-pre-commit-mirror
+    rev: 1.31.6
+    hooks:
+    - id: basedpyright
