--- a/.github/workflows/test_client_macos_nightlies.yml
+++ b/.github/workflows/test_client_macos_nightlies.yml
@@ -27,7 +27,7 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu || true
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
@@ -52,7 +52,7 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu || true
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
@@ -101,7 +101,7 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu || true
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
@@ -126,7 +126,7 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu || true
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
