--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Simulation tracking and monitoring"
 authors = [
   {name = "Simvue Development Team", email = "info@simvue.io"}
 ]
-license = "Apache v2"
+license = "Apache-2.0"
 requires-python = ">=3.10,<3.15"
 readme = "README.md"
 classifiers = [
@@ -35,28 +35,41 @@ keywords = [
     "metrics-gathering"
 ]
 dependencies = [
-  "requests (>=2.32.3,<3.0.0)",
-  "pydantic (>=2.11,<3.0.0)",
-  "tabulate (>=0.9.0,<0.10.0)",
-  "msgpack (>=1.1.0,<2.0.0)",
-  "pyjwt (>=2.10.1,<3.0.0)",
-  "pandas (>=2.2.3,<3.0.0)",
-  "toml (>=0.10.2,<0.11.0)",
-  "click (>=8.1.8,<9.0.0)",
-  "gitpython (>=3.1.44,<4.0.0)",
-  "humanfriendly (>=10.0,<11.0)",
-  "randomname (>=0.2.1,<0.3.0)",
-  "numpy (>=2.0.0,<3.0.0)",
-  "flatdict (>=4.0.1,<5.0.0)",
-  "semver (>=3.0.4,<4.0.0)",
-  "email-validator (>=2.2.0,<3.0.0)",
-  "psutil (>=6.1.1,<7.0.0)",
-  "tenacity (>=9.0.0,<10.0.0)",
-  "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.11\"",
-  "deepmerge (>=2.0,<3.0)",
-  "geocoder (>=1.38.1,<2.0.0)",
-  "pydantic-extra-types (>=2.10.5,<3.0.0)",
-  "pyyaml (>=6.0.2,<7.0.0)",
+    "click>=8.3.0",
+    "deepmerge>=2.0",
+    "email-validator>=2.3.0",
+    "flatdict>=4.0.1",
+    "geocoder>=1.38.1",
+    "gitpython>=3.1.45",
+    "humanfriendly>=10.0",
+    "msgpack>=1.1.1",
+    "pandas>=2.3.3",
+    "psutil>=6.1.1",
+    "pydantic>=2.11.10",
+    "pydantic-extra-types>=2.10.5",
+    "pyjwt>=2.10.1",
+    "pyyaml>=6.0.3",
+    "randomname>=0.2.1",
+    "requests>=2.32.5",
+    "semver>=3.0.4",
+    "typing-extensions>=4.12.2; python_version < \"3.11\"",
+    "tabulate>=0.9.0",
+    "tenacity>=9.1.2",
+    "toml>=0.10.2",
+    "numpy>=2.2.6",
+]
+
+[dependency-groups]
+dev = [
+    "interrogate>=1.7.0",
+    "jinja2>=3.1.6",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+    "pytest-sugar>=1.1.1",
+    "pytest-xdist>=3.8.0",
+    "ruff>=0.14.0",
+    "types-requests>=2.32.4.20250913",
 ]
 
 [project.urls]
@@ -69,23 +82,6 @@ plot = ["plotly (>=6.0.0,<7.0.0)", "matplotlib (>=3.10.0,<4.0.0)"]
 
 [project.scripts]
 simvue_sender = "simvue.bin.sender:run"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.0.0"
-pytest-dependency = "^0.6.0"
-ruff = ">=0.5.0,<0.10.0"
-pytest-cov = ">=4.1,<7.0"
-pytest-mock = "^3.14.0"
-pytest-sugar = "^1.0.0"
-pytest-xdist = "^3.6.1"
-jinja2 = "^3.1.6"
-types-requests = "^2.32.0.20241016"
-interrogate = "^1.7.0"
-pytest-timeout = "^2.3.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 lint.extend-select = ["C901", "T201"]
@@ -124,3 +120,7 @@ exclude = ["docs", "tests"]
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[build-system]
+requires = ["uv_build>=0.9.2,<0.10"]
+build-backend = "uv_build"
