--- a/.github/workflows/test_client_ubuntu_nightlies.yml
+++ b/.github/workflows/test_client_ubuntu_nightlies.yml
@@ -90,7 +90,7 @@ jobs:
         python -m pytest -x
         -m dispatch -c /dev/null -p no:warnings
         -n 8 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  online_online:
+  online_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -138,7 +138,7 @@ jobs:
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
         python -m pytest -x
-        -m "offline and not api" -c /dev/null -p no:warnings
+        -m "offline and not api" -m cli -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   config_tests:
     runs-on: ubuntu-latest
