--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,7 @@ updates:
       include: "scope"
     open-pull-requests-limit: 5
     target-branch: "dev"
+    ignore:
+      - dependency-type: all
+        match:
+          - "tests/**"
