--- a/.github/workflows/test_client_macos_nightlies.yml
+++ b/.github/workflows/test_client_macos_nightlies.yml
@@ -161,6 +161,30 @@ jobs:
         python -m pytest -x
         -m config -c /dev/null -p no:warnings
         -n 8 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+  scenario_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@v5
+    - name: Set up Python 3.14
+      uses: actions/setup-python@v6
+      with:
+        python-version: "3.14"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: >-
+        python -m pytest -x
+        -m "scenario and not run" -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   executor_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 30
