Added executor process termination to logs and better exception handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ markers = [
     "local: tests of functionality which do not involve a server or writing to an offline cache file",
     "object_retrieval: tests relating to retrieval of objects from the server",
     "object_removal: tests relating to removal of objects from the server",
+    "cli: sender CLI tests"
 ]
 
 [tool.interrogate]
