--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dependencies = [
   "geocoder (>=1.38.1,<2.0.0)",
   "pydantic-extra-types (>=2.10.5,<3.0.0)",
   "pyyaml (>=6.0.2,<7.0.0)",
+  "pympler (>=1.1,<2.0)",
 ]
 
 [project.urls]
